<resources>
    <string name="app_name">FireFinancialDemo</string>
    <string name="permission_request_rationale">Location needed to provide weather data</string>
    <string name="permission_denied">Cannot proceed without location</string>
    <string name="settings">settings</string>
    <string name="fetch_error">Error fetching weather</string>
    <string name="max_temp">Max temp</string>
    <string name="min_temp">Min temp</string>
    <string name="current_temp">Current temp</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="welcome">Your weather for location:</string>
    <string name="wind_speed">Wind</string>

    <string name="wind_speed_with_value">%1$s mph</string>
    <string name="temperature_with_value">%1$s ℃</string>

</resources>
