<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradientbackground"
        android:orientation="vertical">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/activity_weather_current_weather_image"
            android:layout_width="@dimen/weather_image_size"
            android:layout_height="@dimen/weather_image_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/position_margin"
            fresco:placeholderImage="@drawable/ic_wb_sunny_black_24dp" />

        <TextView
            android:id="@+id/activity_weather_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@android:color/white"
            android:textSize="@dimen/city_name_text_size"
            android:textStyle="bold"
            tools:text="Glasgow City" />

        <TextView
            android:id="@+id/activity_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@android:color/white"
            android:textSize="@dimen/city_name_text_size"
            android:textStyle="bold"
            tools:text="Cloudy" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_normal"
            android:elevation="@dimen/image_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingTop="@dimen/margin_normal"
                    android:baselineAligned="false"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_xsmall"
                        android:layout_marginTop="@dimen/margin_xsmall"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/current_temp"
                            android:textSize="@dimen/label_text_size" />

                        <TextView
                            android:id="@+id/activity_weather_current_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/margin_small"
                            android:textColor="@color/profile_start_blue"
                            android:textSize="@dimen/temp_value_size"
                            android:textStyle="bold"
                            tools:text="26C" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_xsmall"
                        android:layout_marginTop="@dimen/margin_xsmall"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/min_temp"
                            android:textSize="@dimen/label_text_size" />

                        <TextView
                            android:id="@+id/activity_weather_min_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/margin_small"
                            android:textColor="@color/profile_start_blue"
                            android:textSize="@dimen/temp_value_size"
                            android:textStyle="bold"
                            tools:text="26C" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_xsmall"
                        android:layout_marginTop="@dimen/margin_xsmall"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/max_temp"
                            android:textSize="@dimen/label_text_size" />

                        <TextView
                            android:id="@+id/activity_weather_max_temp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/margin_small"
                            android:textColor="@color/profile_start_blue"
                            android:textSize="@dimen/temp_value_size"
                            android:textStyle="bold"
                            tools:text="26C" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:paddingBottom="@dimen/margin_normal"
                    android:baselineAligned="false"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_xsmall"
                        android:layout_marginTop="@dimen/margin_xsmall"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/margin_xsmall"
                            android:text="@string/sunrise" />

                        <TextView
                            android:id="@+id/activity_weather_sunset"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/margin_xsmall"
                            android:textColor="@color/profile_start_blue"
                            android:textSize="@dimen/temp_value_size"
                            android:textStyle="bold"
                            tools:text="8am" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_xsmall"
                        android:layout_marginTop="@dimen/margin_xsmall"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/margin_xsmall"
                            android:text="@string/sunset" />

                        <TextView
                            android:id="@+id/activity_weather_sunrise"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/margin_xsmall"
                            android:textColor="@color/profile_start_blue"
                            android:textSize="@dimen/temp_value_size"
                            android:textStyle="bold"
                            tools:text="10pm" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_xsmall"
                        android:layout_marginTop="@dimen/margin_xsmall"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/margin_xsmall"
                            android:text="@string/wind_speed" />

                        <TextView
                            android:id="@+id/activity_weather_wind_speed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:padding="@dimen/margin_xsmall"
                            android:textColor="@color/profile_start_blue"
                            android:textSize="@dimen/temp_value_size"
                            android:textStyle="bold"
                            tools:text="25mph" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <include
        android:id="@+id/progress"
        layout="@layout/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />


</android.support.constraint.ConstraintLayout>